# sidekickAI

./: .gitignore  README.md  app.py  database.db  pyproject.toml  requirements.txt  sidekick.py
src/: graph_builder.py  llms.py  nodes.py  output_models.py  rag_manager.py  sidekick.py  state.py
src/core/: graph.py  sidekick.py  state.py
src/db/: db.py  folder_repository.py  session_repository.py  user_repository.py
src/gradio_utils/: auth.py
src/repositories/: folder_repository.py  session_repository.py
src/services/: auth_service.py  folder_service.py  indexing_service.py  retrieval_service.py  session_service.py  sidekick_service.py
src/tools/: __init__.py  file_tools.py  python_tools.py  rag_tool.py  retrieval_tools.py  search_tools.py  wikipedia_tools.py
src/ui/: auth.py  gradio_wrappers.py  handlers.py  text_utils.py  ui_controller.py  ui_core.py  ui_events.py  ui_handlers.py  ui_layout.py  ui_runtime.py
src/utils/: fs_utils.py  path_utils.py
static/: style.css
vector_db/example_docs_a69f7845/c9ca5504-c48b-4b23-9abe-9f227e0d9ee5/: index_metadata.pickle
vector_db/sidekick_7e2d85d7/: chroma.sqlite3
