[project]
name = "sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "gradio>=5.49.1",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "unstructured>=0.18.20",
]
